src/test/deca/context/valid/our_tests/jb-OpIneq-simple1.deca
// Description:
//    OpIneq Valid
//
// Resultats:
//    Ligne 11: Operation avec OpDroit float et OpGauche int
// 
// Historique:
//    cree le 18/01/2017

{
1 < 1.0;
}
