src/test/deca/context/invalid/our_tests/jb-modulo1.deca
// Description:
//    Invalid modulo operand
//
// Resultats:
//    Should throw Contextual error (rule 3.51)
//
// Historique:
//    cree le 22/01/2017

{
    1.0 % 3;
    null % 3;
    new Object() % 3;
}
